[gd_scene load_steps=20 format=3 uid="uid://d1cb4djmat1dj"]

[ext_resource type="Script" uid="uid://4gerx64y471n" path="res://Scripts/dungeon_1_map.gd" id="1_ocdpx"]
[ext_resource type="Texture2D" uid="uid://chfkysvsxt4eg" path="res://gui/Update/Backgrounds/Plains_Level.png" id="1_shrlp"]
[ext_resource type="Texture2D" uid="uid://n08ji1i2co16" path="res://gui/Update/UI/small button.png" id="3_st54u"]
[ext_resource type="Texture2D" uid="uid://da6rdtvo1nlwj" path="res://gui/Update/icons/return.png" id="4_taxvn"]
[ext_resource type="Texture2D" uid="uid://dfy42u6wycc3x" path="res://gui/Update/icons/next level select.png" id="5_oyrip"]
[ext_resource type="Texture2D" uid="uid://dkhwbc22y8hv6" path="res://gui/Update/icons/level indicator.png" id="5_t6djc"]
[ext_resource type="Texture2D" uid="uid://bmnybgl8oe1l" path="res://gui/Update/icons/unlocked level.png" id="6_o4t43"]
[ext_resource type="Texture2D" uid="uid://b3rmvd1s8kk13" path="res://gui/Update/icons/hover next level select.png" id="6_sq72c"]
[ext_resource type="Texture2D" uid="uid://bghwdafec1fjd" path="res://gui/Update/UI/Select Level title bg.png" id="7_y4tkd"]
[ext_resource type="FontFile" uid="uid://l1q8mfvbxty3" path="res://Fonts/dyslexiafont/OpenDyslexic-Regular.otf" id="8_oyrip"]
[ext_resource type="Texture2D" uid="uid://cp7k7g2my8pgp" path="res://gui/Update/UI/level details.png" id="8_xrlqr"]
[ext_resource type="FontFile" uid="uid://bdlqaeel30c00" path="res://Fonts/dyslexiafont/OpenDyslexic-Bold.otf" id="9_o4t43"]
[ext_resource type="Texture2D" uid="uid://dlusv4b6bm07h" path="res://gui/Update/UI/ui 10.png" id="12_y4tkd"]
[ext_resource type="Texture2D" uid="uid://cmvfv5h4u7j6e" path="res://gui/Update/icons/close icon.png" id="13_1g3o1"]
[ext_resource type="Texture2D" uid="uid://caaebspp4lxk4" path="res://gui/Update/icons/slaym enemeh.png" id="13_xrlqr"]
[ext_resource type="Texture2D" uid="uid://ct2kkb4phx2kr" path="res://gui/Update/icons/treant.png" id="16_lqaqn"]
[ext_resource type="Texture2D" uid="uid://clbfvil7saw1l" path="res://gui/Update/UI/Fight Button (Default).png" id="19_0ho0y"]

[sub_resource type="SpriteFrames" id="SpriteFrames_o52iv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1g3o1"]

[node name="DungeonMap1" type="Node2D"]
script = ExtResource("1_ocdpx")
metadata/_edit_vertical_guides_ = [1249.0]

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1463.0
offset_bottom = 810.0
texture = ExtResource("1_shrlp")

[node name="BackButton" type="TextureButton" parent="TextureRect"]
custom_minimum_size = Vector2(1, 1)
layout_mode = 0
offset_left = 135.0
offset_top = 678.0
offset_right = 162.0
offset_bottom = 705.0
scale = Vector2(3.76293, 3.83557)
mouse_default_cursor_shape = 2
texture_normal = ExtResource("3_st54u")

[node name="TextureRect" type="TextureRect" parent="TextureRect/BackButton"]
layout_mode = 0
offset_left = 4.73197
offset_top = 7.02944
offset_right = 33.732
offset_bottom = 31.0294
scale = Vector2(0.612926, 0.537912)
texture = ExtResource("4_taxvn")

[node name="BackLabel" type="Label" parent="TextureRect/BackButton"]
visible = false
layout_mode = 0
offset_left = 15.4135
offset_top = 7.03938
offset_right = 74.4135
offset_bottom = 26.0394
theme_override_colors/font_color = Color(0.054902, 0.27451, 0.47451, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_fonts/font = ExtResource("8_oyrip")
theme_override_font_sizes/font_size = 8
text = "Back"
horizontal_alignment = 1

[node name="Stage1" type="TextureButton" parent="."]
offset_left = 224.0
offset_top = 311.0
offset_right = 239.0
offset_bottom = 320.0
scale = Vector2(6.5654, 6.5654)
mouse_default_cursor_shape = 2
texture_normal = ExtResource("5_oyrip")
texture_hover = ExtResource("6_sq72c")

[node name="MobIndicator" type="TextureRect" parent="Stage1"]
layout_mode = 0
offset_left = 0.609256
offset_top = -16.2976
offset_right = 21.6093
offset_bottom = 18.7024
scale = Vector2(0.644803, 0.542527)
texture = ExtResource("5_t6djc")

[node name="enemyicon" type="TextureRect" parent="Stage1/MobIndicator"]
layout_mode = 0
offset_left = 2.83461
offset_top = 3.64973
offset_right = 17.8346
offset_bottom = 20.6497
texture = ExtResource("13_xrlqr")

[node name="Stage2" type="TextureButton" parent="."]
offset_left = 416.0
offset_top = 583.0
offset_right = 431.0
offset_bottom = 592.0
scale = Vector2(6.5654, 6.5654)
mouse_default_cursor_shape = 2
texture_normal = ExtResource("6_o4t43")
texture_hover = ExtResource("6_sq72c")

[node name="MobIndicator" type="TextureRect" parent="Stage2"]
visible = false
layout_mode = 0
offset_left = 0.609256
offset_top = -16.2976
offset_right = 21.6093
offset_bottom = 18.7024
scale = Vector2(0.644803, 0.542527)
texture = ExtResource("5_t6djc")

[node name="enemyicon" type="TextureRect" parent="Stage2/MobIndicator"]
layout_mode = 0
offset_left = 2.83461
offset_top = 3.64973
offset_right = 17.8346
offset_bottom = 20.6497
texture = ExtResource("13_xrlqr")

[node name="Stage3" type="TextureButton" parent="."]
offset_left = 733.0
offset_top = 364.0
offset_right = 748.0
offset_bottom = 373.0
scale = Vector2(6.5654, 6.5654)
mouse_default_cursor_shape = 2
texture_normal = ExtResource("6_o4t43")
texture_hover = ExtResource("6_sq72c")

[node name="MobIndicator" type="TextureRect" parent="Stage3"]
visible = false
layout_mode = 0
offset_left = 0.609256
offset_top = -16.2976
offset_right = 21.6093
offset_bottom = 18.7024
scale = Vector2(0.644803, 0.542527)
texture = ExtResource("5_t6djc")

[node name="enemyicon" type="TextureRect" parent="Stage3/MobIndicator"]
layout_mode = 0
offset_left = 2.83461
offset_top = 3.64973
offset_right = 17.8346
offset_bottom = 20.6497
texture = ExtResource("13_xrlqr")

[node name="Stage4" type="TextureButton" parent="."]
offset_left = 1001.0
offset_top = 586.0
offset_right = 1016.0
offset_bottom = 595.0
scale = Vector2(6.5654, 6.5654)
mouse_default_cursor_shape = 2
texture_normal = ExtResource("6_o4t43")
texture_hover = ExtResource("6_sq72c")

[node name="MobIndicator" type="TextureRect" parent="Stage4"]
visible = false
layout_mode = 0
offset_left = 0.609256
offset_top = -16.2976
offset_right = 21.6093
offset_bottom = 18.7024
scale = Vector2(0.644803, 0.542527)
texture = ExtResource("5_t6djc")

[node name="enemyicon" type="TextureRect" parent="Stage4/MobIndicator"]
layout_mode = 0
offset_left = 2.83461
offset_top = 3.64973
offset_right = 17.8346
offset_bottom = 20.6497
texture = ExtResource("13_xrlqr")

[node name="Stage5" type="TextureButton" parent="."]
offset_left = 1218.0
offset_top = 309.0
offset_right = 1233.0
offset_bottom = 318.0
scale = Vector2(6.5654, 6.5654)
mouse_default_cursor_shape = 2
texture_normal = ExtResource("6_o4t43")
texture_hover = ExtResource("6_sq72c")

[node name="BossIndicator" type="TextureRect" parent="Stage5"]
visible = false
layout_mode = 0
offset_left = 0.609256
offset_top = -16.2976
offset_right = 21.6093
offset_bottom = 18.7024
scale = Vector2(0.644803, 0.542527)
texture = ExtResource("5_t6djc")

[node name="enemyicon" type="TextureRect" parent="Stage5/BossIndicator"]
layout_mode = 0
offset_left = 2.83461
offset_top = 3.64973
offset_right = 17.8346
offset_bottom = 20.6497
texture = ExtResource("16_lqaqn")

[node name="SelectLevel" type="TextureRect" parent="."]
offset_left = 461.0
offset_top = 77.0
offset_right = 940.0
offset_bottom = 168.0
texture = ExtResource("7_y4tkd")

[node name="Label" type="Label" parent="SelectLevel"]
layout_mode = 0
offset_left = 34.0
offset_top = 6.0
offset_right = 459.0
offset_bottom = 89.0
theme_override_fonts/font = ExtResource("8_oyrip")
theme_override_font_sizes/font_size = 45
text = "DUNGEON 1"
uppercase = true

[node name="StageDetails" type="TextureRect" parent="."]
offset_left = 803.0
offset_top = 7.0
offset_right = 1452.0
offset_bottom = 803.0
texture = ExtResource("8_xrlqr")

[node name="CloseButton" type="TextureButton" parent="StageDetails"]
layout_mode = 0
offset_left = 614.0
offset_top = -5.0
offset_right = 623.0
offset_bottom = 4.0
scale = Vector2(4.9143, 4.9143)
mouse_default_cursor_shape = 2
texture_normal = ExtResource("13_1g3o1")

[node name="RightContainer" type="Control" parent="StageDetails"]
anchors_preset = 0
offset_left = 295.0
offset_top = 262.0
offset_right = 610.0
offset_bottom = 641.0

[node name="Detail" type="Label" parent="StageDetails/RightContainer"]
layout_mode = 2
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 91.0
offset_top = -366.0
offset_right = -94.0
offset_bottom = -329.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 0.866658, 0.380537, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("8_oyrip")
theme_override_font_sizes/font_size = 20
text = "DETAILS"
horizontal_alignment = 1

[node name="Info" type="Label" parent="StageDetails/RightContainer"]
layout_mode = 2
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -321.0
offset_right = -11.0
offset_bottom = -159.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.937255, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("8_oyrip")
theme_override_font_sizes/font_size = 20
text = "Detail"
autowrap_mode = 3

[node name="ExpReward" type="Label" parent="StageDetails/RightContainer"]
layout_mode = 2
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -133.0
offset_right = -124.0
offset_bottom = -96.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.937255, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("8_oyrip")
theme_override_font_sizes/font_size = 20
text = "EXP Reward:"
autowrap_mode = 3

[node name="ExpRewardValue" type="Label" parent="StageDetails/RightContainer"]
layout_mode = 2
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 200.0
offset_top = -127.0
offset_right = -2.0
offset_bottom = -99.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.937255, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("8_oyrip")
theme_override_font_sizes/font_size = 15
text = "100"
autowrap_mode = 3

[node name="SkillLabel" type="Label" parent="StageDetails/RightContainer"]
layout_mode = 2
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -100.0
offset_right = -226.0
offset_bottom = -63.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.937255, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("8_oyrip")
theme_override_font_sizes/font_size = 20
text = "Skill:"
autowrap_mode = 3

[node name="SkillName" type="Label" parent="StageDetails/RightContainer"]
layout_mode = 2
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 88.0
offset_top = -95.0
offset_right = -55.0
offset_bottom = -67.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.937255, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("8_oyrip")
theme_override_font_sizes/font_size = 15
text = "Skill Name"
autowrap_mode = 3

[node name="Health" type="Label" parent="StageDetails/RightContainer"]
layout_mode = 0
offset_left = 41.0
offset_top = 342.0
offset_right = 102.0
offset_bottom = 379.0
theme_override_fonts/font = ExtResource("9_o4t43")
theme_override_font_sizes/font_size = 20
text = "100"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Attack" type="Label" parent="StageDetails/RightContainer"]
layout_mode = 0
offset_left = 147.0
offset_top = 342.0
offset_right = 209.0
offset_bottom = 379.0
theme_override_fonts/font = ExtResource("9_o4t43")
theme_override_font_sizes/font_size = 20
text = "100"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Durability" type="Label" parent="StageDetails/RightContainer"]
layout_mode = 0
offset_left = 256.0
offset_top = 342.0
offset_right = 312.0
offset_bottom = 379.0
theme_override_fonts/font = ExtResource("9_o4t43")
theme_override_font_sizes/font_size = 20
text = "100"
horizontal_alignment = 1
autowrap_mode = 3

[node name="LeftContainer" type="Control" parent="StageDetails"]
anchors_preset = 0
offset_left = 39.0
offset_top = 256.0
offset_right = 289.0
offset_bottom = 645.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="StageDetails/LeftContainer"]
position = Vector2(135, 318)
scale = Vector2(2.79408, 2.76731)
sprite_frames = SubResource("SpriteFrames_o52iv")

[node name="MonsterName" type="Label" parent="StageDetails/LeftContainer"]
layout_mode = 2
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 31.0
offset_top = -355.0
offset_right = -26.0
offset_bottom = -302.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.964706, 0, 0.47451, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("8_oyrip")
theme_override_font_sizes/font_size = 20
text = "name"
horizontal_alignment = 1
vertical_alignment = 2
autowrap_mode = 3
uppercase = true

[node name="LVLabel" type="Label" parent="StageDetails/LeftContainer"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 71.0
offset_top = -308.0
offset_right = -98.0
offset_bottom = -271.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("8_oyrip")
theme_override_font_sizes/font_size = 20
text = "Stage"
horizontal_alignment = 1

[node name="LVLabel2" type="Label" parent="StageDetails/LeftContainer"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 158.0
offset_top = -308.0
offset_right = -53.0
offset_bottom = -271.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.964706, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("8_oyrip")
theme_override_font_sizes/font_size = 20
text = "5"

[node name="Label" type="Label" parent="StageDetails"]
layout_mode = 0
offset_left = 207.0
offset_top = 20.0
offset_right = 374.0
offset_bottom = 81.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("9_o4t43")
theme_override_font_sizes/font_size = 33
text = "STAGE"

[node name="Label2" type="Label" parent="StageDetails"]
layout_mode = 0
offset_left = 389.0
offset_top = 19.0
offset_right = 486.0
offset_bottom = 80.0
theme_override_fonts/font = ExtResource("9_o4t43")
theme_override_font_sizes/font_size = 33
text = "5"
autowrap_mode = 3

[node name="MonsterIconButtonContainer" type="HBoxContainer" parent="StageDetails"]
layout_mode = 0
offset_left = 93.0
offset_top = 123.0
offset_right = 217.0
offset_bottom = 151.0
scale = Vector2(3.83947, 3.51072)
alignment = 1

[node name="Mob1Button" type="TextureButton" parent="StageDetails/MonsterIconButtonContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("12_y4tkd")

[node name="TextureRect" type="TextureRect" parent="StageDetails/MonsterIconButtonContainer/Mob1Button"]
layout_mode = 0
offset_left = 6.31601
offset_top = 7.59498
offset_right = 21.316
offset_bottom = 21.595
texture = ExtResource("13_xrlqr")

[node name="Mob2Button" type="TextureButton" parent="StageDetails/MonsterIconButtonContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("12_y4tkd")

[node name="TextureRect" type="TextureRect" parent="StageDetails/MonsterIconButtonContainer/Mob2Button"]
layout_mode = 0
offset_left = 6.31601
offset_top = 7.59498
offset_right = 21.316
offset_bottom = 21.595
texture = ExtResource("13_xrlqr")

[node name="Mob3Button" type="TextureButton" parent="StageDetails/MonsterIconButtonContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("12_y4tkd")

[node name="TextureRect" type="TextureRect" parent="StageDetails/MonsterIconButtonContainer/Mob3Button"]
layout_mode = 0
offset_left = 6.31601
offset_top = 7.59498
offset_right = 21.316
offset_bottom = 21.595
texture = ExtResource("13_xrlqr")

[node name="Boss1Button" type="TextureButton" parent="StageDetails/MonsterIconButtonContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("12_y4tkd")

[node name="TextureRect" type="TextureRect" parent="StageDetails/MonsterIconButtonContainer/Boss1Button"]
layout_mode = 0
offset_left = 5.5764
offset_top = 5.412
offset_right = 20.5764
offset_bottom = 22.412
texture = ExtResource("16_lqaqn")

[node name="FightButton" type="Button" parent="StageDetails"]
layout_mode = 0
offset_left = 175.0
offset_top = 682.0
offset_right = 278.0
offset_bottom = 704.0
scale = Vector2(2.88017, 3.15688)
mouse_default_cursor_shape = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("9_o4t43")
theme_override_font_sizes/font_size = 10
theme_override_styles/focus = SubResource("StyleBoxEmpty_1g3o1")
text = "FIGHT"
icon = ExtResource("19_0ho0y")
flat = true
icon_alignment = 1
expand_icon = true
